Add partial user update functionality